# tabbit-gl52-eval

./: .gitignore  README.md  pyproject.toml
examples/: README.md  trajectory_batch.py
tabbit_gl52_eval/: __init__.py  benchmarks.py  cdp_client.py  cli.py  code_extractor.py  evaluator.py  platform_detect.py  runner.py
