[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabbit-gl52"
version = "1.1.0"
description = "Free GLM-5.2 access via Tabbit browser — no API key, no payment, no quota"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Feiyue Contributors"}
]
keywords = ["glm-5.2", "tabbit", "free", "llm", "provider", "cdp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=12",
]

[project.scripts]
tabbit-gl52 = "tabbit_gl52_eval.cli:main"

[tool.setuptools.packages.find]
include = ["tabbit_gl52_eval*"]
